First commited as before_24770_rev4