@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,6 +9,7 @@
  *     IBM Corporation - initial API and implementation
  *     Benjamin Muskalla <b.muskalla@gmx.net>
  *     - Fix for bug 172574 - [IDE] DeleteProjectDialog inconsequent selection behavior
+ *     Andrey Loskutov <loskutov@gmx.de> - Bug 41431
  *******************************************************************************/
 package org.eclipse.ui.actions;
 
@@ -62,7 +63,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	static class DeleteProjectDialog extends MessageDialog {
 
-		private IResource[] projects;
+		private List<IResource> projects;
 
 		private boolean deleteContent = false;
 
@@ -76,7 +77,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 		private Button radio2;
 
-		DeleteProjectDialog(Shell parentShell, IResource[] projects) {
+		DeleteProjectDialog(Shell parentShell, List<IResource> projects) {
 			super(parentShell, getTitle(projects), null, // accept the
 					// default window
 					// icon
@@ -88,16 +89,16 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			setShellStyle(getShellStyle() | SWT.SHEET);
 		}
 
-		static String getTitle(IResource[] projects) {
-			if (projects.length == 1) {
+		static String getTitle(List<IResource> projects) {
+			if (projects.size() == 1) {
 				return IDEWorkbenchMessages.DeleteResourceAction_titleProject1;
 			}
 			return IDEWorkbenchMessages.DeleteResourceAction_titleProjectN;
 		}
 
-		static String getMessage(IResource[] projects) {
-			if (projects.length == 1) {
-				IProject project = (IProject) projects[0];
+		static String getMessage(List<IResource> projects) {
+			if (projects.size() == 1) {
+				IProject project = (IProject) projects.get(0);
 				return NLS
 						.bind(
 								IDEWorkbenchMessages.DeleteResourceAction_confirmProject1,
@@ -105,26 +106,25 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			}
 			return NLS.bind(
 					IDEWorkbenchMessages.DeleteResourceAction_confirmProjectN,
-					new Integer(projects.length));
+					Integer.valueOf((projects.size())));
 		}
 
-		/*
-		 * (non-Javadoc) Method declared on Window.
-		 */
+		@Override
 		protected void configureShell(Shell newShell) {
 			super.configureShell(newShell);
 			PlatformUI.getWorkbench().getHelpSystem().setHelp(newShell,
 					IIDEHelpContextIds.DELETE_PROJECT_DIALOG);
 		}
 
+		@Override
 		protected Control createCustomArea(Composite parent) {
 			Composite composite = new Composite(parent, SWT.NONE);
 			composite.setLayout(new GridLayout());
 			radio1 = new Button(composite, SWT.RADIO);
 			radio1.addSelectionListener(selectionListener);
 			String text1;
-			if (projects.length == 1) {
-				IProject project = (IProject) projects[0];
+			if (projects.size() == 1) {
+				IProject project = (IProject) projects.get(0);
 				if (project == null || project.getLocation() == null) {
 					text1 = IDEWorkbenchMessages.DeleteResourceAction_deleteContentsN;
 				} else {
@@ -138,7 +138,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			}
 			radio1.setText(text1);
 			radio1.setFont(parent.getFont());
-			
+
 			// Add explanatory label that the action cannot be undone.
 			// We can't put multi-line formatted text in a radio button,
 			// so we have to create a separate label.
@@ -153,6 +153,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			// corresponding radio button.
 			// see https://bugs.eclipse.org/bugs/show_bug.cgi?id=172574
 			detailsLabel.addMouseListener(new MouseAdapter() {
+				@Override
 				public void mouseUp(MouseEvent e) {
 					deleteContent = true;
 					radio1.setSelection(deleteContent);
@@ -176,6 +177,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 		}
 
 		private SelectionListener selectionListener = new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				Button button = (Button) e.widget;
 				if (button.getSelection()) {
@@ -188,11 +190,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			return deleteContent;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.window.Window#open()
-		 */
+		@Override
 		public int open() {
 			// Override Window#open() to allow for non-interactive testing.
 			if (fIsTesting) {
@@ -205,7 +203,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 		/**
 		 * Set this delete dialog into testing mode. It won't pop up, and it
 		 * returns true for deleteContent.
-		 * 
+		 *
 		 * @param t
 		 *            the testing mode
 		 */
@@ -219,7 +217,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 */
 	public static final String ID = PlatformUI.PLUGIN_ID
 			+ ".DeleteResourceAction";//$NON-NLS-1$
-	
+
 	private IShellProvider shellProvider = null;
 
 	/**
@@ -237,17 +235,19 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Creates a new delete resource action.
-	 * 
+	 *
 	 * @param shell
 	 *            the shell for any dialogs
 	 * @deprecated Should take an IShellProvider, see
 	 *             {@link #DeleteResourceAction(IShellProvider)}
 	 */
+	@Deprecated
 	public DeleteResourceAction(final Shell shell) {
 		super(IDEWorkbenchMessages.DeleteResourceAction_text);
 		Assert.isNotNull(shell);
 		initAction();
 		setShellProvider(new IShellProvider() {
+			@Override
 			public Shell getShell() {
 				return shell;
 			}
@@ -256,7 +256,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Creates a new delete resource action.
-	 * 
+	 *
 	 * @param provider
 	 *            the shell provider to use. Must not be <code>null</code>.
 	 * @since 3.4
@@ -267,7 +267,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 		initAction();
 		setShellProvider(provider);
 	}
-	
+
 	/**
 	 * Action initialization.
 	 */
@@ -277,33 +277,33 @@ public class DeleteResourceAction extends SelectionListenerAction {
 				IIDEHelpContextIds.DELETE_RESOURCE_ACTION);
 		setId(ID);
 	}
-	
+
 	private void setShellProvider(IShellProvider provider) {
 		shellProvider = provider;
 	}
 
 	/**
 	 * Returns whether delete can be performed on the current selection.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the resources can be deleted, and
 	 *         <code>false</code> if the selection contains non-resources or
 	 *         phantom resources
 	 */
-	private boolean canDelete(IResource[] resources) {
+	private boolean canDelete(List<IResource> resources) {
 		// allow only projects or only non-projects to be selected;
 		// note that the selection may contain multiple types of resource
 		if (!(containsOnlyProjects(resources) || containsOnlyNonProjects(resources))) {
 			return false;
 		}
 
-		if (resources.length == 0) {
+		if (resources.isEmpty()) {
 			return false;
 		}
 		// Return true if everything in the selection exists.
-		for (int i = 0; i < resources.length; i++) {
-			IResource resource = resources[i];
+		for (int i = 0; i < resources.size(); i++) {
+			IResource resource = resources.get(i);
 			if (resource.isPhantom()) {
 				return false;
 			}
@@ -313,15 +313,15 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Returns whether the selection contains linked resources.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the resources contain linked resources,
 	 *         and <code>false</code> otherwise
 	 */
-	private boolean containsLinkedResource(IResource[] resources) {
-		for (int i = 0; i < resources.length; i++) {
-			IResource resource = resources[i];
+	private boolean containsLinkedResource(List<IResource> resources) {
+		for (int i = 0; i < resources.size(); i++) {
+			IResource resource = resources.get(i);
 			if (resource.isLinked()) {
 				return true;
 			}
@@ -331,13 +331,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Returns whether the selection contains only non-projects.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the resources contains only non-projects,
 	 *         and <code>false</code> otherwise
 	 */
-	private boolean containsOnlyNonProjects(IResource[] resources) {
+	private boolean containsOnlyNonProjects(List<IResource> resources) {
 		int types = getSelectedResourceTypes(resources);
 		// check for empty selection
 		if (types == 0) {
@@ -349,13 +349,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Returns whether the selection contains only projects.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the resources contains only projects, and
 	 *         <code>false</code> otherwise
 	 */
-	private boolean containsOnlyProjects(IResource[] resources) {
+	private boolean containsOnlyProjects(List<IResource> resources) {
 		int types = getSelectedResourceTypes(resources);
 		// note that the selection may contain multiple types of resource
 		return types == IResource.PROJECT;
@@ -363,35 +363,35 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Asks the user to confirm a delete operation.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDelete(IResource[] resources) {
+	private boolean confirmDelete(List<IResource> resources) {
 		if (containsOnlyProjects(resources)) {
 			return confirmDeleteProjects(resources);
 		}
 		return confirmDeleteNonProjects(resources);
-		
+
 	}
 
 	/**
 	 * Asks the user to confirm a delete operation, where the selection contains
 	 * no projects.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDeleteNonProjects(IResource[] resources) {
+	private boolean confirmDeleteNonProjects(List<IResource> resources) {
 		String title;
 		String msg;
-		if (resources.length == 1) {
+		if (resources.size() == 1) {
 			title = IDEWorkbenchMessages.DeleteResourceAction_title1;
-			IResource resource = resources[0];
+			IResource resource = resources.get(0);
 			if (resource.isLinked()) {
 				msg = NLS
 						.bind(
@@ -408,11 +408,11 @@ public class DeleteResourceAction extends SelectionListenerAction {
 				msg = NLS
 						.bind(
 								IDEWorkbenchMessages.DeleteResourceAction_confirmLinkedResourceN,
-								new Integer(resources.length));
+						Integer.valueOf(resources.size()));
 			} else {
 				msg = NLS.bind(
 						IDEWorkbenchMessages.DeleteResourceAction_confirmN,
-						new Integer(resources.length));
+ new Integer(resources.size()));
 			}
 		}
 		return MessageDialog.openQuestion(shellProvider.getShell(), title, msg);
@@ -421,13 +421,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	/**
 	 * Asks the user to confirm a delete operation, where the selection contains
 	 * only projects. Also remembers whether project content should be deleted.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDeleteProjects(IResource[] resources) {
+	private boolean confirmDeleteProjects(List<IResource> resources) {
 		DeleteProjectDialog dialog = new DeleteProjectDialog(shellProvider.getShell(), resources);
 		dialog.setTestingMode(fTestingMode);
 		int code = dialog.open();
@@ -435,47 +435,31 @@ public class DeleteResourceAction extends SelectionListenerAction {
 		return code == 0; // YES
 	}
 
-
-
-
-	/**
-	 * Return an array of the currently selected resources.
-	 * 
-	 * @return the selected resources
-	 */
-	private IResource[] getSelectedResourcesArray() {
-		List selection = getSelectedResources();
-		IResource[] resources = new IResource[selection.size()];
-		selection.toArray(resources);
-		return resources;
-	}
-
 	/**
 	 * Returns a bit-mask containing the types of resources in the selection.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 */
-	private int getSelectedResourceTypes(IResource[] resources) {
+	private int getSelectedResourceTypes(List<IResource> resources) {
 		int types = 0;
-		for (int i = 0; i < resources.length; i++) {
-			types |= resources[i].getType();
+		for (int i = 0; i < resources.size(); i++) {
+			types |= resources.get(i).getType();
 		}
 		return types;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IAction.
-	 */
+	@Override
 	public void run() {
-		final IResource[] resources = getSelectedResourcesArray();
+		final List<IResource> resources = getSelectedResources();
 
 		if (!fTestingMode) {
 			if (LTKLauncher.openDeleteWizard(getStructuredSelection())) {
+				CloseResourceAction.closeMatchingEditors(resources, true);
 				return;
 			}
 		}
-		
+
 		// WARNING: do not query the selected resources more than once
 		// since the selection may change during the run,
 		// e.g. due to window activation when the prompt dialog is dismissed.
@@ -487,23 +471,15 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 		Job deletionCheckJob = new Job(IDEWorkbenchMessages.DeleteResourceAction_checkJobName) {
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.core.runtime.jobs.Job#run(org.eclipse.core.runtime.IProgressMonitor)
-			 */
+			@Override
 			protected IStatus run(IProgressMonitor monitor) {
-				if (resources.length == 0)
+				if (resources.isEmpty())
 					return Status.CANCEL_STATUS;
 				scheduleDeleteJob(resources);
 				return Status.OK_STATUS;
 			}
-			
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.core.runtime.jobs.Job#belongsTo(java.lang.Object)
-			 */
+
+			@Override
 			public boolean belongsTo(Object family) {
 				if (IDEWorkbenchMessages.DeleteResourceAction_jobName
 						.equals(family)) {
@@ -519,18 +495,20 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Schedule a job to delete the resources to delete.
-	 * 
+	 *
 	 * @param resourcesToDelete
 	 */
-	private void scheduleDeleteJob(final IResource[] resourcesToDelete) {
+	private void scheduleDeleteJob(final List<IResource> resourcesToDelete) {
 		// use a non-workspace job with a runnable inside so we can avoid
 		// periodic updates
 		Job deleteJob = new Job(
 				IDEWorkbenchMessages.DeleteResourceAction_jobName) {
+			@Override
 			public IStatus run(final IProgressMonitor monitor) {
 				try {
-					final DeleteResourcesOperation op = 
-						new DeleteResourcesOperation(resourcesToDelete, IDEWorkbenchMessages.DeleteResourceAction_operationLabel, deleteContent);
+					final DeleteResourcesOperation op =
+						new DeleteResourcesOperation(resourcesToDelete.toArray(new IResource[resourcesToDelete.size()]),
+								IDEWorkbenchMessages.DeleteResourceAction_operationLabel, deleteContent);
 					op.setModelProviderIds(getModelProviderIds());
 					// If we are deleting projects and their content, do not
 					// execute the operation in the undo history, since it cannot be
@@ -541,16 +519,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 						// or validation checking occurs.  Do it in a syncExec because
 						// we are calling this from a Job.
 						WorkbenchJob statusJob = new WorkbenchJob("Status checking"){ //$NON-NLS-1$
-							/* (non-Javadoc)
-							 * @see org.eclipse.ui.progress.UIJob#runInUIThread(org.eclipse.core.runtime.IProgressMonitor)
-							 */
-							public IStatus runInUIThread(
-									IProgressMonitor monitor) {
-								return op.computeExecutionStatus(monitor);
+							@Override
+							public IStatus runInUIThread(IProgressMonitor m) {
+								return op.computeExecutionStatus(m);
 							}
-							
+
 						};
-						
+
 						statusJob.setSystem(true);
 						statusJob.schedule();
 						try {//block until the status is ready
@@ -558,28 +533,24 @@ public class DeleteResourceAction extends SelectionListenerAction {
 						} catch (InterruptedException e) {
 							//Do nothing as status will be a cancel
 						}
-						
+
 						if (statusJob.getResult().isOK()) {
 							return op.execute(monitor, WorkspaceUndoUtil.getUIInfoAdapter(shellProvider.getShell()));
-						} 
+						}
 						return statusJob.getResult();
 					}
 					return PlatformUI.getWorkbench().getOperationSupport()
-							.getOperationHistory().execute(op, monitor, 
+							.getOperationHistory().execute(op, monitor,
 							WorkspaceUndoUtil.getUIInfoAdapter(shellProvider.getShell()));
 				} catch (ExecutionException e) {
 					if (e.getCause() instanceof CoreException) {
 						return ((CoreException)e.getCause()).getStatus();
-					} 
+					}
 					return new Status(IStatus.ERROR, IDEWorkbenchPlugin.IDE_WORKBENCH, e.getMessage(),e);
 				}
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.core.runtime.jobs.Job#belongsTo(java.lang.Object)
-			 */
+			@Override
 			public boolean belongsTo(Object family) {
 				if (IDEWorkbenchMessages.DeleteResourceAction_jobName
 						.equals(family)) {
@@ -598,15 +569,16 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * <code>SelectionListenerAction</code> method disables the action if the
 	 * selection contains phantom resources or non-resources
 	 */
+	@Override
 	protected boolean updateSelection(IStructuredSelection selection) {
 		return super.updateSelection(selection)
-				&& canDelete(getSelectedResourcesArray());
+				&& canDelete(getSelectedResources());
 	}
 
 	/**
 	 * Returns the model provider ids that are known to the client that
 	 * instantiated this operation.
-	 * 
+	 *
 	 * @return the model provider ids that are known to the client that
 	 *         instantiated this operation.
 	 * @since 3.2
@@ -619,7 +591,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * Sets the model provider ids that are known to the client that
 	 * instantiated this operation. Any potential side effects reported by these
 	 * models during validation will be ignored.
-	 * 
+	 *
 	 * @param modelProviderIds
 	 *            the model providers known to the client who is using this
 	 *            operation.
